--- a/halloween.html
+++ b/halloween.html
@@ -43,12 +43,12 @@ a {
 <p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Halloween Massacre</b></p>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://orion-uploads.openroadmedia.com/lg_7c238890eca1-halloweencreepyurbanlegends_massacre.jpg" width="500" height="300">
-    A recurring Halloween myth is the threat of a massacre. One particular photo from 1962 continues<br> to spread a legendary story about 
-    a Halloween massacre. The plot goes that the man in <br> the black mask in the photo to the right was at a costume party and decided to lock all the doors 
-    in order <br> to attempt murdering each and every guest. Seven partygoers met their end and the man <br>was never caught. It wasn’t until 
-    1969 that his mask was found by the FBI. <br>However, the details are vague, but the rumour usually provides just enough specificity to
-    make the warning <br> apply to a large section of the population. Stories of supposed historic massacres have been turned into memes, making them 
-    easier to spread and appear more authoritative, despite the fact there isn’t a shred <br> of evidence to back them up.</p>
+    A recurring Halloween myth is the threat of a massacre. One particular photo from 1962 continues to spread a legendary story about 
+    a Halloween massacre. The plot goes that the man in the black mask in the photo to the right was at a costume party and decided to lock all the doors 
+    in order to attempt murdering each and every guest. Seven partygoers met their end and the man was never caught. It wasn’t until 
+    1969 that his mask was found by the FBI. However, the details are vague, but the rumour usually provides just enough specificity to
+    make the warning apply to a large section of the population. Stories of supposed historic massacres have been turned into memes, making them 
+    easier to spread and appear more authoritative, despite the fact there isn’t a shred of evidence to back them up.</p>
     <p><a href="https://the-line-up.com/halloween-urban-legends">(Source)</a></p>
 <br>
 <br>   
